--- a/index.html.html
+++ b/index.html.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>weather app</title>
 </head>
 <body>
+    <div class="container">
     <h2>Melbourne</h2> 
+    <img src="https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png" alt="sunny" />
     <h1>Sunny, 21°C</h1>
-    <ul>
-        <li>Wednesday </li>
-        <li>12 August 2019</li>
-        <li>Thursday</li>
-        <li>13 August 2019</li>
-        <li>Friday </li>
-        <li>14 August 2019</li>
-        <li>Saturday </li>
-        <li>15 August 2019</li>
-        <li>Sunday </li>
-        <li>16 August 2019</li>
+    <h4>Tuesday, 05:00 PM</h4>
+    <div class="row">
+        <div class="col-6">
+        <ul class="day-date">
+        <li class="day">Wednesday </li>
+        <li class="date">12 August 2019</li>
+        <li class="day">Thursday</li>
+        <li class="date">13 August 2019</li>
+        <li class="day">Friday </li>
+        <li class="date">14 August 2019</li>
+        <li class="day">Saturday </li>
+        <li class="date">15 August 2019</li>
+        <li class="day">Sunday </li>
+        <li class="date">16 August 2019</li>
     </ul>
-
-    <ul>
+</div>
+<div class="col-6">
+    <ul class="temp">
         <li>16°C</li>
         <li>21°C</li>
         <li>24°C</li>
@@ -30,5 +41,9 @@
         <li>21°C</li>
         
     </ul>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
