--- a/index.html.html
+++ b/index.html.html
@@ -16,7 +16,7 @@
     <h2>Melbourne</h2> 
     <img src="https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png" alt="sunny" />
     <h1>Sunny, 21°C</h1>
-    <h4>Tuesday, 05:00 PM</h4>
+    <h4 id="display-time">Tuesday, 05:00</h4>
     <div class="row">
         <div class="col-6">
         <ul class="day-date">
@@ -46,4 +46,6 @@
 </div>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="src/apps.js"></script>
 </html>
