including the api and html ids

--- a/index.html.html
+++ b/index.html.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="container">
-    <h2>Melbourne</h2> 
+    <h2 id ="city">Melbourne</h2> 
     <img src="https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png" alt="sunny" />
-    <h1>Sunny, 21°C</h1>
+    <h1><span id ="display-cond">Sunny, </span><span id ="display-temp">21</span>°C</h1>
     <h4 id="display-time">Tuesday, 05:00</h4>
     
 <div class="row">
