--- a/index.html.html
+++ b/index.html.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
     <h2 id ="city">Melbourne</h2> 
-    <img src="https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png" alt="sunny" />
-    <h1><span id ="display-cond">Sunny, </span><span id ="display-temp">21</span>°C</h1>
+    <img src="" alt="" id="icon"/>
+    <h1><span id ="display-cond">Sunny</span>, <span id ="display-temp">21</span>°C</h1>
     <h4 id="display-time">Tuesday, 05:00</h4>
     
 <div class="row">
