search engine javascript
started on building the search engine javascript

--- a/index.html.html
+++ b/index.html.html
@@ -20,7 +20,7 @@
     
 <div class="row">
     <div class="col-8">
-    <form>
+    <form id ="search-form">
         <input type="text" autocomplete ="off" class="form-control" id="input" placeholder="Search for Location">
     </div>
         <button type="submit" class="btn btn-primary">Submit</button>
